feat: Integrate Firebase for authentication and database
Replaces local mock data and IndexedDB storage with Firebase Authentication and Firestore. This change centralizes user management, booking data, and application settings in a cloud-based solution, enabling real-time synchronization and scalability.

Key changes include:
- Adding Firebase SDK dependencies.
- Implementing Firebase Auth listeners for user sessions.
- Migrating data operations to Firestore (CRUD for bookings, users, settings).
- Removing mock data and IndexedDB utilities.
- Updating type definitions to reflect the removal of `passwordHash`.
- Adjusting registration and login flows for Firebase Auth.
- Modifying user deletion to exclude authentication account deletion.

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
     "react": "https://aistudiocdn.com/react@^19.1.1",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
     "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.2",
-    "react-transition-group": "https://aistudiocdn.com/react-transition-group@^4.4.5"
+    "react-transition-group": "https://aistudiocdn.com/react-transition-group@^4.4.5",
+    "firebase/": "https://aistudiocdn.com/firebase@^12.3.0/"
   }
 }
 </script>
