--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://aistudio.google.com/apps/drive/11d6Ipe9A0KvKkiOhLVz-7Spg1UbocG-I?showAssistant=true&resourceKey=&showPreview=true">
+    <meta name="twitter:url" content="https://aistudio.google.com/apps/drive/11d6Ipe9A0KvKkiOhLVz-7Spg1UbocG-I?showAssistant=true&resourceKey=&showPreview=true">
     <meta name="twitter:title" content="Reserva de Sala - TELECOM">
     <meta name="twitter:description" content="La presente aplicación funciona como agenda de reservas para uso de salas de reuniones dentro de las bases de Telecom.">
     <meta name="twitter:image" content="https://i.postimg.cc/Hss2rxB2/IMAGEN-SITE.png">
