feat: Add PWA manifest link
Includes the `manifest.json` link to enable Progressive Web App features for better user experience and offline capabilities.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Reserva de Sala - TELECOM</title>
 
     <!-- PWA & SEO Meta Tags -->
-    
+    <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#111827">
     <meta name="description" content="La presente aplicación funciona como agenda de reservas para uso de salas de reuniones dentro de las bases de Telecom."/>
     
