--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <meta property="og:url" content="https://aistudio.google.com/apps/drive/11d6Ipe9A0KvKkiOhLVz-7Spg1UbocG-I?showAssistant=true&resourceKey=&showPreview=true">
     <meta property="og:title" content="Reserva de Sala - TELECOM">
     <meta property="og:description" content="La presente aplicación funciona como agenda de reservas para uso de salas de reuniones dentro de las bases de Telecom.">
-    <meta property="og:image" content="https://i.postimg.cc/gJHg44fB/Reserva-Sala-Telecom.jpg">
+    <meta property="og:image" content="https://i.postimg.cc/Hss2rxB2/IMAGEN-SITE.png">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://aistudio.google.com/apps/drive/11d6Ipe9A0KvKkiOhLVz-7Spg1UbocG-I?showAssistant=true&resourceKey=&showPreview=true">
     <meta name="twitter:title" content="Reserva de Sala - TELECOM">
     <meta name="twitter:description" content="La presente aplicación funciona como agenda de reservas para uso de salas de reuniones dentro de las bases de Telecom.">
-    <meta name="twitter:image" content="https://i.postimg.cc/gJHg44fB/Reserva-Sala-Telecom.jpg">
+    <meta name="twitter:image" content="https://i.postimg.cc/Hss2rxB2/IMAGEN-SITE.png">
     
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
