--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
     "firebase/compat/app": "https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js",
     "firebase/compat/auth": "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js",
     "firebase/compat/firestore": "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js",
-    "firebase/": "https://aistudiocdn.com/firebase@^12.3.0/"
+    "firebase/": "https://aistudiocdn.com/firebase@^12.3.0/",
+    "@emailjs/browser": "https://aistudiocdn.com/@emailjs/browser@^4.4.1"
   }
 }
 </script>
