feat: Clean up social media URL in index.html
Removes query parameters from the `og:url` and `twitter:url` meta tags in `index.html` to ensure accurate sharing of the application's landing page.

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://aistudio.google.com/apps/drive/11d6Ipe9A0KvKkiOhLVz-7Spg1UbocG-I?showAssistant=true&resourceKey=&showPreview=true">
+    <meta property="og:url" content="https://aistudio.google.com/apps/drive/11d6Ipe9A0KvKkiOhLVz-7Spg1UbocG-I">
     <meta property="og:title" content="Reserva de Sala - TELECOM">
     <meta property="og:description" content="La presente aplicación funciona como agenda de reservas para uso de salas de reuniones dentro de las bases de Telecom.">
     <meta property="og:image" content="https://i.postimg.cc/Hss2rxB2/IMAGEN-SITE.png">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://aistudio.google.com/apps/drive/11d6Ipe9A0KvKkiOhLVz-7Spg1UbocG-I?showAssistant=true&resourceKey=&showPreview=true">
+    <meta name="twitter:url" content="https://aistudio.google.com/apps/drive/11d6Ipe9A0KvKkiOhLVz-7Spg1UbocG-I">
     <meta name="twitter:title" content="Reserva de Sala - TELECOM">
     <meta name="twitter:description" content="La presente aplicación funciona como agenda de reservas para uso de salas de reuniones dentro de las bases de Telecom.">
     <meta name="twitter:image" content="https://i.postimg.cc/Hss2rxB2/IMAGEN-SITE.png">
