--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
     "firebase/compat/auth": "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js",
     "firebase/compat/firestore": "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js",
     "firebase/": "https://aistudiocdn.com/firebase@^12.3.0/",
-    "@emailjs/browser": "https://aistudiocdn.com/@emailjs/browser@^4.4.1"
+    "@emailjs/browser": "https://aistudiocdn.com/@emailjs/browser@^4.4.1",
+    "react-hot-toast": "https://aistudiocdn.com/react-hot-toast@^2.6.0"
   }
 }
 </script>
