--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
     "firebase/compat/app": "https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js",
     "firebase/compat/auth": "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js",
     "firebase/compat/firestore": "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js",
-    "firebase/": "https://aistudiocdn.com/firebase@^12.3.0/",
     "@emailjs/browser": "https://aistudiocdn.com/@emailjs/browser@^4.4.1",
-    "react-hot-toast": "https://aistudiocdn.com/react-hot-toast@^2.6.0"
+    "react-hot-toast": "https://aistudiocdn.com/react-hot-toast@^2.6.0",
+    "firebase/": "https://aistudiocdn.com/firebase@^12.4.0/"
   }
 }
 </script>
