fix: Correct Firebase compat imports and types
Replaces namespace imports for Firebase compat modules with default imports. This resolves type errors and initialization issues by ensuring the compat library is accessed as intended.

Also updates the type definition for `firebaseUser` in `types.ts` and `AppContext.tsx` to correctly reference `firebase.User` from the root `firebase` namespace, aligning with the compat library's structure.

Additionally, a minor adjustment was made to `AgendaPage.tsx` to use `absolute inset-0` for the main container, ensuring it correctly fills the available space.

--- a/index.html
+++ b/index.html
@@ -97,15 +97,15 @@
     "firebase/compat/app": "https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js",
     "firebase/compat/auth": "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js",
     "firebase/compat/firestore": "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js",
+    "firebase/": "https://aistudiocdn.com/firebase@^12.3.0/",
     "@emailjs/browser": "https://aistudiocdn.com/@emailjs/browser@^4.4.1",
-    "react-hot-toast": "https://aistudiocdn.com/react-hot-toast@^2.6.0",
-    "firebase/": "https://aistudiocdn.com/firebase@^12.4.0/"
+    "react-hot-toast": "https://aistudiocdn.com/react-hot-toast@^2.6.0"
   }
 }
 </script>
 </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/bundle.js"></script>
+    <script src="/bundle.js"></script>
   </body>
 </html>
