feat: Integrate Firebase SDK directly
Include Firebase SDK scripts in index.html for direct integration and remove redundant CDN imports from the module map. This change simplifies the Firebase setup and ensures the SDK is available globally.

Also, refactors the Firebase initialization in `utils/firebase.ts` to use the globally available `firebase` object from the script tags, improving runtime reliability.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
     <meta name="twitter:description" content="La presente aplicación funciona como agenda de reservas para uso de salas de reuniones dentro de las bases de Telecom.">
     <meta name="twitter:image" content="https://i.postimg.cc/Hss2rxB2/IMAGEN-SITE.png">
     
+    <!-- Firebase SDK Scripts -->
+    <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
+    
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -95,12 +100,9 @@
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
     "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.1",
     "react-transition-group": "https://aistudiocdn.com/react-transition-group@^4.4.5",
-    "firebase/compat/app": "https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js",
-    "firebase/compat/auth": "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js",
-    "firebase/compat/firestore": "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js",
-    "firebase/": "https://aistudiocdn.com/firebase@^12.3.0/",
     "@emailjs/browser": "https://aistudiocdn.com/@emailjs/browser@^4.4.1",
-    "react-hot-toast": "https://aistudiocdn.com/react-hot-toast@^2.6.0"
+    "react-hot-toast": "https://aistudiocdn.com/react-hot-toast@^2.6.0",
+    "firebase/": "https://aistudiocdn.com/firebase@^12.4.0/"
   }
 }
 </script>
