--- a/index.html
+++ b/index.html
@@ -39,12 +39,13 @@
 </head>
 <body>
   <noscript>Necesitas habilitar JavaScript para ejecutar esta aplicación.</noscript>
-  <div id="root"></div>
-
-  <!-- Carga global de Firebase SDKs para evitar conflictos con el sistema de módulos -->
+  
+  <!-- Firebase Scripts -->
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+
+  <div id="root"></div>
 
   <script type="module" src="/index.tsx"></script>
 </body>
