feat: Integrate Tailwind CSS and simplify Firebase setup
This commit refactors the project to use Tailwind CSS for styling and streamlines the Firebase initialization process.

Key changes include:
- Removing direct Firebase SDK script tags from `index.html`.
- Removing the `window.firebase` type declaration and direct access in `utils/firebase.ts`, relying instead on module imports.
- Enhancing the `AgendaPage` component with Tailwind classes for better layout management.
- Adjusting `QRCodeModal` to share the URL directly, improving compatibility with various sharing platforms.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
   <meta property="twitter:title" content="Reserva de Sala de TELECOM">
   <meta property="twitter:description" content="Agenda de reservas para salas de reuniones en Telecom.">
   <meta property="twitter:image" content="https://i.postimg.cc/Hss2rxB2/IMAGEN-SITE.png">
+  
+  <script src="https://cdn.tailwindcss.com"></script>
 
   <script type="importmap">
 {
@@ -41,11 +43,6 @@
   <noscript>Necesitas habilitar JavaScript para ejecutar esta aplicación.</noscript>
   
   <div id="root"></div>
-
-  <!-- Firebase SDK -->
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
 
   <script type="module" src="/index.tsx"></script>
 </body>
