feat: Update shareable URL and Firebase setup
Updates the `DEFAULT_SHAREABLE_URL` to the new deployed domain and refactors the Firebase initialization in `utils/firebase.ts` to correctly use the globally loaded SDK via script tags. This ensures proper type resolution and avoids potential module import conflicts, improving the reliability of Firebase integration.

--- a/index.html
+++ b/index.html
@@ -12,19 +12,24 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://reservalasala-c176c.firebaseapp.com">
+  <meta property="og:url" content="https://reserva-de-sala-de-telecom-56158496123.us-west1.run.app">
   <meta property="og:title" content="Reserva de Sala de TELECOM">
   <meta property="og:description" content="Agenda de reservas para salas de reuniones en Telecom.">
   <meta property="og:image" content="https://i.postimg.cc/Hss2rxB2/IMAGEN-SITE.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://reservalasala-c176c.firebaseapp.com">
+  <meta property="twitter:url" content="https://reserva-de-sala-de-telecom-56158496123.us-west1.run.app">
   <meta property="twitter:title" content="Reserva de Sala de TELECOM">
   <meta property="twitter:description" content="Agenda de reservas para salas de reuniones en Telecom.">
   <meta property="twitter:image" content="https://i.postimg.cc/Hss2rxB2/IMAGEN-SITE.png">
   
   <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Carga global y explícita de Firebase para máxima fiabilidad -->
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
 
   <script type="importmap">
 {
