feat: Update app icons and metadata
Updates the application's favicons and metadata to use new image assets. This includes changing the apple-touch-icon, og:image, and twitter:image to point to a new image URL, and updating the DEFAULT_SITE_IMAGE_URL constant. This aims to improve the application's visual representation in social media shares and as a PWA icon.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   <link rel="manifest" href="/manifest.json">
   <link rel="icon" href="/favicon.ico">
-  <link rel="apple-touch-icon" href="https://i.postimg.cc/Hss2rxB2/IMAGEN-SITE.png">
+  <link rel="apple-touch-icon" href="https://i.postimg.cc/J7QPcyH9/ICONO-APP-RESERVA.png">
   <meta name="theme-color" content="#2563eb">
 
   <!-- Open Graph / Facebook -->
@@ -15,14 +15,14 @@
   <meta property="og:url" content="https://reserva-de-sala-de-telecom-56158496123.us-west1.run.app">
   <meta property="og:title" content="Reserva de Sala de TELECOM">
   <meta property="og:description" content="Agenda de reservas para salas de reuniones en Telecom.">
-  <meta property="og:image" content="https://i.postimg.cc/Hss2rxB2/IMAGEN-SITE.png">
+  <meta property="og:image" content="https://i.postimg.cc/J7QPcyH9/ICONO-APP-RESERVA.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://reserva-de-sala-de-telecom-56158496123.us-west1.run.app">
   <meta property="twitter:title" content="Reserva de Sala de TELECOM">
   <meta property="twitter:description" content="Agenda de reservas para salas de reuniones en Telecom.">
-  <meta property="twitter:image" content="https://i.postimg.cc/Hss2rxB2/IMAGEN-SITE.png">
+  <meta property="twitter:image" content="https://i.postimg.cc/J7QPcyH9/ICONO-APP-RESERVA.png">
   
   <script src="https://cdn.tailwindcss.com"></script>
 
